kubernetes/aaplication_webapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
spec:
  mtls:
    mode: STRICT
