kubernetes/vault.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: my-vault
