kubernetes/dapr12.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csharp-function-subscriber
  labels:
    app: csharp-function-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csharp-function-subscriber
  template:
    metadata:
      labels:
        app: csharp-function-subscriber
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "csharp-function-subscriber"
        dapr.io/app-port: "80"
    spec:
      containers:
      - name: csharp-function-subscriber
        image: IMAGE_NAME
        ports:
        - containerPort: 80
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javascript-function-subscriber
  namespace: default
  labels:
    app: javascript-function-subscriber
  annotations:
    osiris.deislabs.io/enabled: true
    osiris.deislabs.io/minReplicas: 1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javascript-function-subscriber
  template:
    metadata:
      labels:
        app: javascript-function-subscriber
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "javascript-function-subscriber"
        dapr.io/app-port: "80"
    spec:
      containers:
      - name: javascript-function-subscriber
        image: IMAGE_NAME
        ports:
        - containerPort: 80
---

kind: Service
apiVersion: v1
metadata:
  name: python-function-publisher
  labels:
    app: python-function-publisher
spec:
  selector:
    app: python-function-publisher
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-function-publisher
  labels:
    app: python-function-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-function-publisher
  template:
    metadata:
      labels:
        app: python-function-publisher
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "python-function-publisher"
        dapr.io/app-port: "80"
    spec:
      containers:
      - name: python-function-publisher
        image: IMAGE_NAME
        ports:
        - containerPort: 80
        imagePullPolicy: Always
