kubernetes/sample_petclinic_with_pvc.yaml
apiVersion: v1 # Kubernetes API version
kind: Service # Kubernetes resource kind we are creating
metadata: # Metadata of the resource kind we are creating
  name: petclinic-mysql-svc
spec:
  selector:
    app: petclinic
  ports:
  - protocol: "TCP"
    port: 8080 # The port that the service is running on in the cluster
    targetPort: 8080 # The port exposed by the service
  type: LoadBalancer # type of the service.
  ---
  kind: ConfigMap
apiVersion: v1
metadata:
  name: configmap
data:
  MYSQL_USER: petclinic
  MYSQL_DATABASE: petclinic
  MYSQL_URL: jdbc:mysql://mysql:3306/petclinic
  ---
  apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 1
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: deepak8934/petapp:66
        ports:
        - containerPort: 8080
        env: # Setting Enviornmental Variables
        - name: MYSQL_URL # Setting Database host address from configMap
          valueFrom:
            configMapKeyRef:
              name: configmap
              key: MYSQL_URL

        - name: MYSQL_DATABASE # Setting Database name from configMap
          valueFrom:
            configMapKeyRef:
              name: configmap
              key: MYSQL_DATABASE

        - name: MYSQL_USER # Setting Database username from configMap
          valueFrom:
            configMapKeyRef:
              name: configmap
              key: MYSQL_USER

        - name: MYSQL_PASSWORD # Setting Database password from Secret
          valueFrom:
            secretKeyRef:
              name: secret-petclinic
              key: MYSQL_PASSWORD

    ---
    apiVersion: apps/v1 # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      tier: database
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim

  ---
  apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
    tier: database
  clusterIP: None
