kubernetes/alb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-ready-alb-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: https-ready-alb-app
  template:
    metadata:
      labels:
        app: https-ready-alb-app
    spec:
      containers:
        - name: https-ready-alb-container
          image: python:3
          command:
            - python
            - -m
            - http.server
---
# https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ready-alb-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: HTTPS-READY-ALB-IP
    networking.gke.io/managed-certificates: https-ready-alb-cert
spec:
  backend:
    serviceName: https-ready-alb-service
    servicePort: 8000
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: https-ready-alb-service
spec:
  type: NodePort
  selector:
    app: https-ready-alb-app
  ports:
    - protocol: TCP
      port: 8000
